--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mongodb": "^5.1.0",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3"
   },
