--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
+    "mongoose": "^7.0.4",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3"
   },
