--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "nodemailer": "^6.9.3",
+    "nodemailer-brevo-transport": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
